# anno

./: .gitignore  .ish.yml  AGENTS.md  Cargo.toml  RALPH.md  README.md  codebook.toml  manifest  plan.md  ralph.sh
.beads/: config.yaml  metadata.json
.beans/: anno-ie1v--add-getlastassistantmessagetext-helper.md  anno-orc1--implement-anno-last-command-in-pi-extension.md  anno-vnpm--final-verification-fmt-test-clippy-build.md  anno-wu21--update-pi-extension-readme-with-anno-last-docs.md  anno-xxc4--register-anno-last-slash-command.md
.ish/: anno-1am6--implement-v-v-mode-toggling-and-same-key-exits-beh.md  anno-1ouf--implement-visual-line-mode-v-keybinding.md  anno-6x5o--implement-countv-to-pre-extend-visual-line-selecti.md  anno-7ejd--wire-entervisuallinemode-into-app-state-and-update.md  anno-8o31--add-modevisualline-variant-and-entervisuallinemode.md  anno-banz--implement-wheel-navigation-for-document-and-annota.md  anno-d4rv--implement-wheel-behavior-for-overlays-and-ignored.md  anno-e1jz--document-mouse-wheel-behavior-in-readme-and-in-app.md  anno-jml9--support-focused-context-mouse-wheel-scrolling.md  anno-n4c8--document-visual-line-mode-in-readme.md  anno-r40b--add-mouse-wheel-event-plumbing-and-test-support.md  anno-vzmd--status-bar-pill-and-help-overlay-for-visual-line-m.md  anno-xrp9--linewise-selection-in-documentviewstate-anchor-kin.md
.opencode/: tui.json
.perles/: config.yaml
opencode/anno-review/: DESIGN.md  README.md  index.js  index.test.mjs  lib.js  lib.test.mjs  (+1 more)
src/: app.rs  document.rs  input.rs  main.rs  startup.rs  test_support.rs
(+60 files in other folders)
