[package]
name = "anno"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
tui-textarea = { path = ".local/repos/tui-textarea", default-features = false, features = ["crossterm"] }
