[package]
name = "anno"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.2"
crossterm = { version = "0.29", features = ["use-dev-tty"] }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
ratatui-textarea = { version = "0.9.2", default-features = false, features = ["crossterm"] }
signal-hook = "0.3"
